# nekobenchmark

./: .gitignore  AGENTS.md  CMakeLists.txt  GODOT_REBUILD.md  Makefile  README.md  export_presets.cfg  project.godot
.github/workflows/: release.yml
scenes/: Main.tscn  corner_watch.tscn  sens_lab.tscn  sphere_aim.tscn
scripts/: app.gd  app.gd.uid  camera_3d_config.gd  camera_3d_config.gd.uid  corner_watch.gd  corner_watch.gd.uid  osu_state.gd  osu_state.gd.uid  practice_room.gd  practice_room.gd.uid  reaction_state.gd  reaction_state.gd.uid  score_store.gd  score_store.gd.uid  sens_lab.gd  sens_lab.gd.uid  sphere_aim.gd  sphere_aim.gd.uid  sphere_state.gd  sphere_state.gd.uid
shaders/: practice_grid.gdshader  practice_grid.gdshader.uid
src/: main.cpp
tests/: playthrough_test.gd  playthrough_test.gd.uid  reaction_state_test.gd  reaction_state_test.gd.uid  sequence_state_test.gd  sequence_state_test.gd.uid
